[package]
name = "aws_doorman"
version = "0.3.2"
authors = ["Vlad Vasiliu"]
edition = "2018"

[dependencies]
aws_sdk_ec2 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-sdk-ec2" }
clap = { version = "~2.33", features = ["color"] }
#confy = "0.4"
color-eyre = "0.5"
fern = "~0.6"
ipnet = "2.3"
lazy_static = "~1.4"
log = "~0.4"
notify-rust = "4"
query_external_ip = "0.1.1"
regex = "~1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }

[profile.release]
lto = true
incremental = true
codegen-units = 1
panic = "abort"

[profile.dev.package.backtrace]
opt-level = 3
