[package]
name = "aws_doorman"
version = "0.3.4"
authors = ["Vlad Vasiliu"]
edition = "2018"

[dependencies]
aws-config = "0.4.0"
aws-sdk-ec2 = "0.4.0"
clap = { version = "~2.33", features = ["color"] }
color-eyre = "0.5"
fern = "~0.6"
ipnet = "2.3"
lazy_static = "~1.4"
log = "~0.4"
notify-rust = "4"
query_external_ip = "0.1"
regex = "~1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }

[profile.release]
lto = true
incremental = true
codegen-units = 1
panic = "abort"

[profile.dev.package.backtrace]
opt-level = 3
