[package]
name = "aws_doorman"
version = "0.4.4"
authors = ["Vlad Vasiliu"]
edition = "2021"

[dependencies]
aws-config = "0.48"
aws-sdk-ec2 = "0.18"
clap = { version = "3", features = ["cargo", "regex"] }
color-eyre = "0.6"
fern = "~0.6"
ipnet = "2"
lazy_static = "~1.4"
log = "~0.4"
notify-rust = "4"
query_external_ip = "0.1"
regex = "~1"
tokio = { version = "1", features = ["rt", "macros", "signal", "time"] }

[profile.release]
lto = true
incremental = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package.backtrace]
opt-level = 3
